data_ingestion_notebook added

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -327,16 +327,124 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Download data from gdrive"
+    "Download data from google drive"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "import gdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = \"https://drive.google.com/file/d/1UKv1uVtQO0oB95A7zOmDwztEJmDM0d2l/view?usp=sharing\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https:',\n",
+       " '',\n",
+       " 'drive.google.com',\n",
+       " 'file',\n",
+       " 'd',\n",
+       " '1UKv1uVtQO0oB95A7zOmDwztEJmDM0d2l',\n",
+       " 'view?usp=sharing']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url.split(\"/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1UKv1uVtQO0oB95A7zOmDwztEJmDM0d2l'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file_id = url.split(\"/\")[-2]\n",
+    "file_id"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading...\n",
+      "From (original): https://drive.google.com/uc?/export=download&id=1UKv1uVtQO0oB95A7zOmDwztEJmDM0d2l\n",
+      "From (redirected): https://drive.google.com/uc?%2Fexport=download&id=1UKv1uVtQO0oB95A7zOmDwztEJmDM0d2l&confirm=t&uuid=5531f2d8-9056-4506-9483-d9a07fba8c1f\n",
+      "To: c:\\Users\\prath\\Downloads\\Project-2\\Chest-Disease-Classification\\research\\Chest-CT-Scan-data.zip\n",
+      "100%|██████████| 49.0M/49.0M [00:03<00:00, 12.3MB/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'Chest-CT-Scan-data.zip'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prefix = 'https://drive.google.com/uc?/export=download&id='\n",
+    "gdown.download(prefix+file_id, \"Chest-CT-Scan-data.zip\")"
    ]
   },
   {
